Make everything pretty

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@ body {
 
   --black-color: #030303;
   --white-color: #fff;
+  --lightGrey-color: #888;
   --grey-color: #666;
   --darkGrey-color: #444;
 
