--- a/styles/Card.module.scss
+++ b/styles/Card.module.scss
@@ -1,8 +1,7 @@
 .item {
   display: flex;
   padding: 16px;
-  width: calc(33.33% - 32px);
-  min-width: 320px;
+  width: 22rem;
   transition-duration: 300ms;
 }
 
@@ -17,14 +16,11 @@
 }
 
 .image {
-  height: 320px;
+  height: 240px;
   overflow: hidden;
-
-  img {
-    object-fit: cover;
-    max-width: 175%;
-    vertical-align: top;
-  }
+  object-fit: cover;
+  max-width: 175%;
+  vertical-align: top;
 }
 
 .text {
@@ -35,7 +31,7 @@
 }
 
 .title {
-  font-size: 20px;
+  font-size: 18px;
   margin: 0px;
   margin-bottom: 8px;
 }
