--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -5,16 +5,20 @@
 }
 
 .hero {
-  height: 480px;
-  object-fit: cover;
-  overflow: hidden;
-  border-radius: 16px;
-  box-shadow: 0 10px 32px -10px rgba(0,0,0,0.30);
-  margin: 60px 0px;
+  margin: 2rem 0;
   
   .image {
     max-width: 100%;
     object-fit: cover;
+  }
+
+  @media screen and (min-width: 800px) {
+    height: 480px;
+    object-fit: cover;
+    overflow: hidden;
+    border-radius: 16px;
+    box-shadow: 0 10px 32px -10px rgba(0,0,0,0.30);
+    margin: 4rem 0;
   }
 }
 
