--- a/styles/NowPlaying.module.scss
+++ b/styles/NowPlaying.module.scss
@@ -24,3 +24,32 @@
         }
     }
 }
+
+.bars {
+    display: flex;
+    width: auto;
+    align-items: center;
+    margin-left: 8px;
+
+    .bar1 {
+        width: 0.25rem;
+        height: 0.25rem;
+        margin-right: 3px;
+        background-color: var(--lightGrey-color);
+        opacity: 75%;
+    }
+    
+    .bar2 {
+        width: 0.25rem;
+        height: 0.25rem;
+        margin-right: 3px;
+        background-color: var(--lightGrey-color);
+    }
+    
+    .bar3 {
+        width: 0.25rem;
+        height: 0.75rem;
+        background-color: var(--lightGrey-color);
+        opacity: 80%;
+    }
+}
