--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -18,7 +18,7 @@
     overflow: hidden;
     border-radius: 16px;
     box-shadow: 0 10px 32px -10px rgba(0,0,0,0.30);
-    margin: 4rem 0;
+    margin: 2rem 0 4rem 0;
   }
 }
 
