--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
+
+@layer base {
+  body {
+    @apply bg-background;
+    @apply text-white;
+  }
+}
+
 @tailwind components;
 @tailwind utilities;
